# Universal_Robots_ROS_scaled_controllers

./: LICENSE  README.md
.github/workflows/: ci.yml
scaled_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml
scaled_joint_trajectory_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
scaled_joint_trajectory_controller/include/scaled_joint_trajectory_controller/: hardware_interface_adapter.h  scaled_joint_command_interface.h  scaled_joint_trajectory_controller.h
scaled_joint_trajectory_controller/src/: scaled_joint_trajectory_controller.cpp
speed_scaling_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
speed_scaling_interface/include/speed_scaling_interface/: speed_scaling_interface.h
speed_scaling_state_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
speed_scaling_state_controller/include/speed_scaling_state_controller/: speed_scaling_state_controller.h
speed_scaling_state_controller/src/: speed_scaling_state_controller.cpp
